# prehooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
prehooks/: add_msg_issue_prefix.py  branch_name_checking.py  utils.py
